hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php.expectf
*** Testing mcrypt_ecb() : usage variation ***

--int 0--

Warning: mcrypt_ecb() expects parameter 1 to be string, integer given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--int 1--

Warning: mcrypt_ecb() expects parameter 1 to be string, integer given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--int 12345--

Warning: mcrypt_ecb() expects parameter 1 to be string, integer given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--int -12345--

Warning: mcrypt_ecb() expects parameter 1 to be string, integer given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--float 10.5--

Warning: mcrypt_ecb() expects parameter 1 to be string, double given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--float -10.5--

Warning: mcrypt_ecb() expects parameter 1 to be string, double given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--float 12.3456789000e10--

Warning: mcrypt_ecb() expects parameter 1 to be string, double given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--float -12.3456789000e10--

Warning: mcrypt_ecb() expects parameter 1 to be string, double given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--float .5--

Warning: mcrypt_ecb() expects parameter 1 to be string, double given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--empty array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--int indexed array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--associative array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--nested arrays--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--uppercase NULL--

Warning: mcrypt_ecb() expects parameter 1 to be string, null given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--lowercase null--

Warning: mcrypt_ecb() expects parameter 1 to be string, null given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--lowercase true--

Warning: mcrypt_ecb() expects parameter 1 to be string, boolean given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--lowercase false--

Warning: mcrypt_ecb() expects parameter 1 to be string, boolean given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--uppercase TRUE--

Warning: mcrypt_ecb() expects parameter 1 to be string, boolean given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--uppercase FALSE--

Warning: mcrypt_ecb() expects parameter 1 to be string, boolean given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--empty string DQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php(109)
bool(false)

--empty string SQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php(109)
bool(false)

--instance of classWithToString--

Warning: mcrypt_ecb() expects parameter 1 to be string, object given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--instance of classWithoutToString--

Warning: mcrypt_ecb() expects parameter 1 to be string, object given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--undefined var--

Warning: mcrypt_ecb() expects parameter 1 to be string, null given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--unset var--

Warning: mcrypt_ecb() expects parameter 1 to be string, null given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--resource--

Warning: mcrypt_ecb() expects parameter 1 to be string, resource given in %s/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109
===DONE===